# ModSecIntl_mod_wace

./: 11-mod_wace.conf  CMakeLists.txt  Makefile  README.md  get_time.go  grpc_client.cpp  grpc_client.hpp  httpd_log  mod_wace.c  mod_wace.spec  wace.proto
crs_rules/: REQUEST-904-WACE.conf  REQUEST-949-WACE.conf
